--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -59,48 +59,52 @@
                         <div class="row" style="text-decoration-style:bold;">
                             <h3>Benefits of joining EtherCRM?</h3>
                         </div>
-                        </style>
                         <li class="glyphicon glyphicon-gbp"> High levels of sales comission and re-sale fees paid.
                         </li>
                         </br>
-                        <li class="glyphicon glyphicon-gbp"> Simple and easy business submission process.
+                        </br>
+                        <li class="glyphicon glyphicon-usd"> Simple and easy business submission process.
                         </li>
                         </br>
-                        <li class="glyphicon-glyphicon-bullhorn"> Sales and marketing material provided.
+                        </br>
+                        <li class="glyphicon glyphicon-bullhorn"> Sales and marketing material provided.
                         </li>
                         </br>
-                        <li class="glyphicon-glyphicon-resize-small"> Easy to sell intuitive technology, desperately needed in fincial services.
+                        </br>
+                        <li class="glyphicon glyphicon-resize-small"> Easy to sell intuitive technology, desperately needed in fincial services.
                         </li>
                         </br>
-                        <li class="glyphicon-glyphicon-piggy-bank"> Cheaper than the competion, when quoted on a like for like basis.
+                        </br>
+                        <li class="glyphicon glyphicon-piggy-bank"> Cheaper than the competion, when quoted on a like for like basis.
                         </li>
                         </br>
-                        <li class="glyphicon-glyphicon-globe"> Global reach, meaning more sales opportunities.
+                        </br>
+                        <li class="glyphicon glyphicon-globe"> Global reach, meaning more sales opportunities.
                         </li>
                         </br>
-                        <li class="glyphicon-glyphicon-euro"> Build your sales team to reach additional productiviy bonus.
+                        </br>
+                        <li class="glyphicon glyphicon-euro"> Build your sales team to reach additional productiviy bonus.
                         </li>
                         </br>
-                        <li class="glyphicon-glyphicon-level-up"> Work flexability, with unlimited earning potential.
+                        </br>
+                        <li class="glyphicon glyphicon-level-up"> Work flexability, with unlimited earning potential.
                         </li>
                         </br>
-                        </style>
-                        </ul>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="example">
-                            <h3>Why Delay??</h3>
-                            <button type="button" class="btn btn-labeled btn-success text-align: justify;">
+                        </br>
+                        <div class="col-lg-6">
+                            <div class="example">
+                                <h3>Why Delay??</h3>
+                                <button type="button" class="btn btn-labeled btn-success text-align: justify;">
                 <span class="btn-label">
                   <i class="glyphicon glyphicon-thumbs-up"></i>
                 </span>Register Today
               </button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
     </div>
     <!--====  End of Banner  ====-->
