--- a/public/ethercrm-ad.html
+++ b/public/ethercrm-ad.html
@@ -60,13 +60,14 @@
                         <h1>Introducing Game Changing
                             <br>EtherCRM</h1>
                         <p>
-                            The simple, intuitive app that makes it easy
-                            <br>to improve sales, reduce risk,
-                            <br>and improve prodcutivity.
+                            Simple &amp;intuitive, improve sales,
+                            </br>reduce risk,improve client engagement.
                         </p>
                         <div class="download">
-                            <a href="ether-demo.html" class="btn btn-download">Book a Demo Today 
-              <span class="tf-ion-arrow-down-c"></span> </a>
+                            <a href="ether-demo.html" class="btn btn-download">
+							Book a Demo Today
+							<span class="tf-ion-arrow-down-c"></span>
+						</a>
                         </div>
                         <div class="support">
                             <img class="img-fluid" src="images/icons/supported-services.png" alt="supported-services">
