--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -94,9 +94,9 @@
                         <div class="col-lg-6">
                             <div class="example">
                                 <h3>Why Delay??</h3>
-                                <button type="button" class="btn btn-labeled btn-success text-align: justify;">
+                                <button type="button" class="btn btn-labeled btn-success text-align justify"><a href="login-sales-reg.html">
                 <span class="btn-label">
-                  <i class="glyphicon glyphicon-thumbs-up"></i>
+                  <i class="glyphicon glyphicon-thumbs-up"></i></a>
                 </span>Register Today
               </button>
                             </div>
