--- a/public/ethercrm-ad.html
+++ b/public/ethercrm-ad.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
     <!-- SITE TITTLE -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -22,16 +23,13 @@
 
     <!-- CUSTOM CSS -->
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/animate.css" rel="stylesheet">
 
-    <!--Font Awesome -->
+
     <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <!-- CUSTOM CSS -->
-    <link href="css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <!-- FAVICON -->
     <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
@@ -48,7 +46,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 justify-content-xs-center">
-                    <div class="image">
+                    <div class="image animated fadeInLeftBig">
                         <img class="img-fluid" src="images/iphone03.png" alt="Iphone-Black">
                     </div>
                 </div>
@@ -66,8 +64,8 @@
                         <div class="download">
                             <a href="ether-demo.html" class="btn btn-download">
 							Book a Demo Today
-							<span class="tf-ion-arrow-down-c"></span>
-						</a>
+						  <span class="tf-ion-arrow-down-c"></span>
+						 </a>
                         </div>
                         <div class="support">
                             <img class="img-fluid" src="images/icons/supported-services.png" alt="supported-services">
