--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -59,7 +59,7 @@
                         <div class="row" style="text-decoration-style:bold;">
                             <h3>Benefits of joining EtherCRM?</h3>
                         </div>
-                        <li class="glyphicon glyphicon-gbp"> High levels of sales comission and re-sale fees paid.
+                        <li class="glyphicon glyphicon-gbp animate fadeInleft"> High levels of sales comission and re-sale fees paid.
                         </li>
                         </br>
                         </br>
@@ -94,7 +94,7 @@
                         <div class="col-lg-6">
                             <div class="example">
                                 <h3>Why Delay??</h3>
-                                <button type="button" class="btn btn-labeled btn-success text-align justify"><a href="login-sales-reg.html">
+                                <button type="button" a href="login-sales-reg.html" class="btn btn-labeled btn-success text-align justify">
                 <span class="btn-label">
                   <i class="glyphicon glyphicon-thumbs-up"></i></a>
                 </span>Register Today
