--- a/public/Ethercrm-sales-reg.html
+++ b/public/Ethercrm-sales-reg.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>EtherCRM</title>
+    <title>Ether CRM</title>
 
     <!-- PLUGINS CSS STYLE -->
     <!-- Bootstrap -->
@@ -20,15 +20,16 @@
     <link href="plugins/owl-carousel/assets/owl.theme.green.min.css" rel="stylesheet" media="screen">
     <!-- Fancy Box -->
     <link href="plugins/fancybox/jquery.fancybox.min.css" rel="stylesheet">
-    <!--Font Awesome -->
-    <link href="plugins/font-awesome/font-awesome.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- CUSTOM CSS -->
     <link href="css/style.css" rel="stylesheet">
+
+
+    <link href="plugins/font-awesome/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
     <!-- FAVICON -->
     <link href="images/EtherCRM-small-logo.png" rel="shortcut icon">
@@ -45,7 +46,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="image">
+                    <div class="image animated fadeInLeftBig">
                         <img class="img" src="images/ethercrm-mac.png" alt="Ethercrm-demo">
                     </div>
                 </div>
@@ -53,41 +54,44 @@
                     <div class="row">
                         <div class="logo">
                             <a href="index.html">
-                                <img width=250 height=180 src="images/Ether-sales.png" alt="ether-sales" style="padding-left:50px;">
+                                <img width=250 height=180 src="images/Ether-sales.png" alt="ether-sales" style="padding-right:30px;">
                             </a>
                         </div>
                         <div class="row" style="text-decoration-style:bold;">
+                            </br>
+                            </br>
+                            </br>
                             <h3>Benefits of joining EtherCRM?</h3>
                         </div>
-                        <li class="glyphicon glyphicon-gbp animate fadeInleft"> High levels of sales comission and re-sale fees paid.
+                        <li class="glyphicon glyphicon-gbp"> <b style="font-size:130%;"> High levels of sales comission and re-sale fees paid.</b>
                         </li>
                         </br>
                         </br>
-                        <li class="glyphicon glyphicon-usd"> Simple and easy business submission process.
+                        <li class="glyphicon glyphicon-usd"> <b style="font-size:130%;"> Simple and easy business submission process.</b>
                         </li>
                         </br>
                         </br>
-                        <li class="glyphicon glyphicon-bullhorn"> Sales and marketing material provided.
+                        <li class="glyphicon glyphicon-bullhorn"> <b style="font-size:130%;"> Sales and marketing material provided.</b>
                         </li>
                         </br>
                         </br>
-                        <li class="glyphicon glyphicon-resize-small"> Easy to sell intuitive technology, desperately needed in fincial services.
+                        <li class="glyphicon glyphicon-resize-small"> <b style="font-size:130%;"> Easy to sell intuitive technology.</b>
                         </li>
                         </br>
                         </br>
-                        <li class="glyphicon glyphicon-piggy-bank"> Cheaper than the competion, when quoted on a like for like basis.
+                        <li class="glyphicon glyphicon-piggy-bank"> <b style="font-size:130%;"> Cheaper than the competion, on a like for like basis.</b>
                         </li>
                         </br>
                         </br>
-                        <li class="glyphicon glyphicon-globe"> Global reach, meaning more sales opportunities.
+                        <li class="glyphicon glyphicon-globe"> <b style="font-size:130%;">Global reach, meaning more sales opportunities.</b>
                         </li>
                         </br>
                         </br>
-                        <li class="glyphicon glyphicon-euro"> Build your sales team to reach additional productiviy bonus.
+                        <li class="glyphicon glyphicon-euro"> <b style="font-size:130%;">Build your sales team to reach productiviy bonuses.</b>
                         </li>
                         </br>
                         </br>
-                        <li class="glyphicon glyphicon-level-up"> Work flexability, with unlimited earning potential.
+                        <li class="glyphicon glyphicon-level-up"> <b style="font-size:130%;">Work flexability, with unlimited earning potential.</b>
                         </li>
                         </br>
                         </br>
